src/objects/Dairy_Cattle_Farmer__c.object
<CustomObject>
    <description>Dairy Cattle Farmers RCT</description>
    <fields>
        <fullName>AI_Challenges__c</fullName>
        <label>Challenges of AI if any</label>
        <picklist>
            <picklistValues>
                <fullName>1. It is very expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. AI is inconvenient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. AI is not important/doesn’t matter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. AI is not worthwhile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Natural mating is better than AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Don’t know enough about AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Don’t know where to get AI services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Bad experience with AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Did not mate any dairy cows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11. Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Haven’t heard of AI</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Abendazole_Quantity_Given__c</fullName>
        <label>Abendazole Quantity Given</label>
        <picklist>
            <picklistValues>
                <fullName>1.Give less than 10ml/calf of upto 50Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Give 10ml to calves upto 50Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Give 15ml to calves upto 100kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Give 20ml to calves upto 100kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Give 30ml to calves upto 100kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Give 30ml to calves upto 150kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Give 50-70ml to adults above 150Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Give 25ml to calves upto 100kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Give 20ml to heifer upto 200kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Give 30ml to heifer upto 250kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11. Give 30ml to heifer upto 150kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12. Give 40ml to adults above 150Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Not sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Acaricides_used_to_kill_ticks__c</fullName>
        <label>Acaricides used to kill ticks</label>
        <picklist>
            <picklistValues>
                <fullName>1. Spona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Decatex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Tsetse tick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Cypermethrine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Amitex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Alfacal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Cyperlanser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Protaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Not sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Majority_of_Dairy_Cattle_on_Farm__c</fullName>
        <label>Age of Majority of Dairy Cattle on Farm</label>
        <picklist>
            <picklistValues>
                <fullName>1. 0-6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. 6-12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. 13months-2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. 3-6 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. 7-10 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. 11-14 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Above 14 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternative_feeds_during_feed_scarcity__c</fullName>
        <label>Alternative feeds during feed scarcity</label>
        <picklist>
            <picklistValues>
                <fullName>1. Hay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Silage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Sugarcane bagasse &amp; molasses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Sugarcane tops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Straws</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Maize stover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Pulse seed remains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Tree leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Vegetable leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Paper waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11. Neem seed cake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12. Sawdust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Peelings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14. Fruit wastes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15. left overs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16. Banana leaves, stems and residues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17. Cassava roots and leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18. Potato roots, off-cuts, leaves,vines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19. Poultry litter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20. Yams vines</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Applies_manure_or_fertilizers_in_garden__c</fullName>
        <description>Do you apply any manure or artificial fertilizers on any of your garden</description>
        <inlineHelpText>Do you apply any manure or artificial fertilizers on any of your garden</inlineHelpText>
        <label>Applies manure or fertilizers in garden</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Artificial_Insemination_Use_last_2_years__c</fullName>
        <description>How much did you use artificial insemination for dairy cows during the last two years?</description>
        <inlineHelpText>How much did you use artificial insemination for dairy cows during the last two years?</inlineHelpText>
        <label>Artificial Insemination Use last 2 years</label>
        <picklist>
            <picklistValues>
                <fullName>1. I used only AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. I use AI most of the time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. I used AI and natural mating about equally</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attended_a_farmer_group_meet_last_12_mth__c</fullName>
        <inlineHelpText>In the last 12 months, have you or anyone in your household attended a meeting of a farming group/organization?</inlineHelpText>
        <label>Attended a farmer group meet last 12 mth</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Available_Water_Sources__c</fullName>
        <description>Which water source available?</description>
        <inlineHelpText>Which water source available?</inlineHelpText>
        <label>Available Water Sources</label>
        <picklist>
            <picklistValues>
                <fullName>1. Bore hole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Protected well</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Protected spring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Rain water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. River/stream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Tanks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Public tap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Unprotected wells</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Private tap water</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Average_Daily_Milk_Quantity_per_Animal__c</fullName>
        <description>On average, how much milk do you get from each animal per day?</description>
        <inlineHelpText>On average, how much milk do you get from each animal per day?</inlineHelpText>
        <label>Average Daily Milk Quantity per Animal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_No_Milk_Producing_Dairy_Animals__c</fullName>
        <label>Average No Milk Producing Dairy Animals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Weekly_Milk_Quantity_per_Animal__c</fullName>
        <label>Average Weekly Milk Quantity per Animal</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aware_of_good_dairy_farming_mgt_practice__c</fullName>
        <inlineHelpText>Are you aware of the good dairy farming management practices and technologies?</inlineHelpText>
        <label>Aware of good dairy farming mgt practice</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefits_received_from_Farmer_Group__c</fullName>
        <label>Benefits received from Farmer Group</label>
        <picklist>
            <picklistValues>
                <fullName>1. Access to Agricultural information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. I have access to Agricultural inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Discounts on agricultural products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Equipment or labor sharing/pooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Access to market services or bulking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Access to credit opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. No benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Bought_new_Dairy_Cattle_last_12_Months__c</fullName>
        <label>Bought new Dairy Cattle last 12 Months?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calf_White_Scours__c</fullName>
        <label>How to Identify Calf White Scours</label>
        <picklist>
            <picklistValues>
                <fullName>1.Yellowish diarrhoea with bad smell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Loss of appetite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Refusal to eat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Loss of condition or weight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Fever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Watery and dull eyes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Clear fluids from the nose</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Can_tell_if_cow_pregnant_after_mating_AI__c</fullName>
        <label>Can tell if cow pregnant after mating/AI</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_tell_normal_calving_from_problematic__c</fullName>
        <description>Are you able to tell an animal having normal calving from that having problems?</description>
        <inlineHelpText>Are you able to tell an animal having normal calving from that having problems?</inlineHelpText>
        <label>Can tell normal calving from problematic</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_tell_that_animal_about_to_give_birth__c</fullName>
        <description>From your experience, can you tell that your animal is about to give birth?</description>
        <inlineHelpText>From your experience, can you tell that your animal is about to give birth?</inlineHelpText>
        <label>Can tell that animal about to give birth</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_tell_whether_animal_is_on_heat__c</fullName>
        <label>Can tell whether animal is on heat</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_tell_worm_infection_in_dairy_animal__c</fullName>
        <label>Can tell worm infection in dairy animal</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Common_Diseases_in_Community__c</fullName>
        <label>Common Diseases in Community</label>
        <picklist>
            <picklistValues>
                <fullName>1. Calf White scours (Common scours)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Pneumonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Salmoneliosis (calf paratyphoid)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Navel infections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Arthritis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. East coast fever (E.C.F)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Coccidiosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Lumpy skin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Foot and Mouth disease (FMD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Anthrax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11. Mastitis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Ring worms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Brucellosis</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Concentrated_Feed_given_to_dairy_cows__c</fullName>
        <description>Which forms of concentrated feed did you give your dairy cows during the last 12 months?</description>
        <inlineHelpText>Which forms of concentrated feed did you give your dairy cows during the last 12 months?</inlineHelpText>
        <label>Concentrated Feed given to dairy cows</label>
        <picklist>
            <picklistValues>
                <fullName>1. Dairy meal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Calf pellets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Mineral supplements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Urea molasses blocks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Consent_for_food_health_questions__c</fullName>
        <label>Consent for food &amp; health questions</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Constraints_to_Pasture_Production__c</fullName>
        <description>What are the constraints to pasture production?</description>
        <inlineHelpText>What are the constraints to pasture production?</inlineHelpText>
        <label>Constraints to Pasture Production</label>
        <picklist>
            <picklistValues>
                <fullName>1. Labour intensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Very expensive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Lack of quality seeds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Time consuming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Lack sufficient knowledge on pastures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Pests and diseases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Crops_Grown__c</fullName>
        <label>Crops Grown</label>
        <picklist>
            <picklistValues>
                <fullName>1. Maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Banana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Cassava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Vegetables</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Main_Source_Dairy_Farming_Info__c</fullName>
        <label>Current Main Source Dairy Farming Info</label>
        <picklist>
            <picklistValues>
                <fullName>1. CKWs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Government extension workers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. NAADs extension officers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. NGOs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. District Farmer Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Radios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Sub-County Farmers Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Parish based Farmers Associations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Private organisation/NGO</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dairy_Animal_Feeds__c</fullName>
        <label>What dairy animals currently fed on</label>
        <picklist>
            <picklistValues>
                <fullName>1. Fresh pastures (grasses &amp; legumes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Peelings,crop residues, left overs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Silage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Hay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Sugarcane bagasse &amp; molasses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. Sugarcane tops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Straws</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Maize stover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Pulse seed remains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10. Tree leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11. Vegetable leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12. Paper waste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Neem seed cake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14. Sawdust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15. Peelings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16. Fruit wastes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17. left overs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18. Banana leaves,stems and residues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19. Cassava roots and leaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20.Sweet potato roots,off-cuts &amp; vines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21. Poultry litter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22. Yams vines</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dairy_Farming_Method_Used__c</fullName>
        <label>Dairy Farming Method Used</label>
        <picklist>
            <picklistValues>
                <fullName>1 Zero grazing system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Tethering animal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Communal grazing/free range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Fenced farmland</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dairy_Farming_Record_Types_Kept__c</fullName>
        <label>Dairy Farming Record Types Kept</label>
        <picklist>
            <picklistValues>
                <fullName>1. Milk production records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Serious illness &amp; treatments records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.By-products/concentrates fed each day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Records of amount fed per day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. Milk sales and utilisation records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Monthly stock check records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Records of deaths and abortions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. Records of vaccinations done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Records of drenching done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.Records of spraying done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Mastitis outbreaks/treatments records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.Identification records of bull used</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13. Records of expected calving dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.Records of dates on which PD required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15. Records of actual calving dates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16. Records of difficulties at calving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17. Records of sex of the calf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18. Records of calf health at birth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.Records of weight of calf at birth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20. Records of ear tag/name at birth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.Records of livestock sales/purchases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22. Records of feeds bought/sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.Records of veterinary supplies bought</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.Records of equipments bought</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.Records of building built</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dairy_Products_Marketing_Constraints__c</fullName>
        <label>Dairy Products Marketing Constraints</label>
        <picklist>
            <picklistValues>
                <fullName>1.Limited value addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Lack of Market information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.Inability to meet consumer demands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.Limited resources(finance,labour,land)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.Limited knowledge/skills in production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.Limited knowledge/skills in marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.Limited knowledge in value addition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_any_Value_Addition_on_Milk__c</fullName>
        <label>Does any Value Addition on Milk?</label>
        <picklist>
            <picklistValues>
                <fullName>1. Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>